<resources>
    <string name="app_name">AppMedicina</string>
    <string name="hint_Nombre">Nombre:</string>
    <string name="hint_Fecha">Fecha: YYYY-MM-DD</string>
    <string name="hint_Hora">Hora: HH:MM</string>
    <string name="hint_Cantidad">Cantidad:</string>
    <string name="hint_Nota">Nota:</string>
    <string name="btn_Guardar">Guardar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="intensidad_array">
        <item>Leve</item>
        <item>Moderado</item>
        <item>Grave</item>
    </string-array>

    <string name="hint_Intensidad">Intensidad</string>
</resources>
