<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearMedicamento">

    <EditText
        android:id="@+id/medicamentos_textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/medicamentos_textFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Fecha"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/medicamentos_textHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Hora"
        android:inputType="time"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/medicamentos_textCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Cantidad"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/medicamentos_textNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Nota"
        android:inputType="text"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageViewMedicamento"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/image_empty" />

    <Button
        android:id="@+id/medicamentos_btnSeleccionarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Seleccionar Imagen" />

    <Button
        android:id="@+id/medicamentos_btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Guardar"
        android:textSize="24sp" />
</LinearLayout>