<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearSintoma">

    <EditText
        android:id="@+id/sintomas_textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sintomas_textFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Fecha"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sintomas_textHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Hora"
        android:inputType="time"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sintomas_spinnerIntensidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/intensidad_array"
        android:prompt="@string/hint_Intensidad" />

    <EditText
        android:id="@+id/sintomas_textNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Nota"
        android:inputType="text"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/leve"
            android:button="@null"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/moderado"
            android:button="@null"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/grave"
            android:button="@null"/>
    </RadioGroup>

    <Button
        android:id="@+id/sintomas_btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Guardar"
        android:textSize="24sp" />
</LinearLayout>